--- a/client/src/app/pages/landing-page/landing-page.component.html
+++ b/client/src/app/pages/landing-page/landing-page.component.html
@@ -1,36 +1,50 @@
-<div class="w-full max-w-xs float-right">
-  <form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
-    <div class="mb-4">
+<div class="w-full max-w-xs float-right h-2">
+  <form (submit)="login === false ? signIn() : signUp()" [formGroup]="userData" [ngClass]="{'signIn': login === false}" class="bg-white shadow-md rounded px-8 pt-6 pb-8">
+    <div class="mb-4" *ngIf="login">
       <label class="block text-gray-700 text-sm font-bold mb-2" for="username">
         Username
       </label>
-      <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="username" type="text" placeholder="Username">
+      <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="username" type="text" placeholder="Username" formControlName="username">
+      <p class="text-red-500 text-xs italic mt-2">Username</p>
     </div>
-    <div class="mb-6">
+    <div *ngIf="login">
+      <label class="block text-gray-700 text-sm font-bold mb-2">
+        Firstame and Lastname
+      </label>
+      <div class="mb-4">
+        <div class="flex">
+          <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline mr-2" id="firstname" type="text" placeholder="Firstname" formControlName="firstname">
+          <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="lastname" type="text" placeholder="Lastname" formControlName="lastname">
+        </div>
+        <p class="text-red-500 text-xs italic mt-2">Firstnñame</p>
+      </div>
+    </div>
+    <div class="mb-4">
       <label class="block text-gray-700 text-sm font-bold mb-2" for="email">
         Email
       </label>
-      <input class="shadow appearance-none border border-red-500 rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" id="email" type="email" placeholder="Email">
+      <input class="shadow appearance-none border border-red-500 rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" id="email" type="email" placeholder="Email" formControlName="email">
       <p class="text-red-500 text-xs italic">Email</p>
     </div>
-    <div class="mb-6">
-      <label class="block text-gray-700 text-sm font-bold mb-2" for="password">
-        Password
-      </label>
-      <input class="shadow appearance-none border border-red-500 rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" id="password" type="password" placeholder="******************">
-      <p class="text-red-500 text-xs italic">Please choose a password.</p>
+    <label class="block text-gray-700 text-sm font-bold mb-2" for="password">
+      Password
+    </label>
+    <div class="mb-4">
+      <div class="flex">
+        <input class="shadow appearance-none border border-red-500 rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline mr-2" id="password" type="password" placeholder="******************" formControlName="password">
+        <input class="shadow appearance-none border border-red-500 rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" id="confirmPassword" type="confirmPassword" placeholder="******************" *ngIf="login" formControlName="confirmPassword">
+      </div>
+      <p class="text-red-500 text-xs italic">Password</p>
     </div>
     <div class="flex items-center justify-between">
-      <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="button">
-        Sign In
+      <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit">
+        {{login ? "Sign Up" : "Sign In"}}
       </button>
-      <a class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800" href="#">
-        Forgot Password?
-      </a>
+      <asl-google-signin-button type='icon'></asl-google-signin-button>
     </div>
+    <a (click)="setLogin()" class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800 mt-2" href="#">
+      {{login ? "Already have an account? Sign In" : "Don't have an account? Sign up"}}
+    </a>
   </form>
-  <p class="text-center text-gray-500 text-xs">
-    &copy;2020 Acme Corp. All rights reserved.
-  </p>
 </div>
 <img style="width: 1045px; height: 561px;" src="../../../assets/videojuegos.jpg">
