--- a/client/src/app/pages/landing-page/landing-page.component.css
+++ b/client/src/app/pages/landing-page/landing-page.component.css
@@ -1,3 +1,9 @@
 .signIn {
-  margin-top: 100px;
+  margin-right: 10px;
+  margin-top: 140px;
+}
+
+.signUp {
+  margin-right: 10px;
+  margin-top: 65px;
 }
