--- a/client/src/app/pages/landing-page/landing-page.component.html
+++ b/client/src/app/pages/landing-page/landing-page.component.html
@@ -1,11 +1,12 @@
 <div class="w-full max-w-xs float-right h-2">
-  <form (submit)="login === false ? signIn() : signUp()" [formGroup]="userData" [ngClass]="{'signIn': login === false}" class="bg-white shadow-md rounded px-8 pt-6 pb-8">
+  <form (submit)="login === false ? signIn() : signUp()" [formGroup]="userData" [ngClass]="{'signIn': login === false, 'signUp': login === true}" class="bg-white shadow-md rounded px-8 pt-6 pb-8">
+    <h1>{{login ? "Sign Up" : "Sign In"}}</h1>
     <div class="mb-4" *ngIf="login">
       <label class="block text-gray-700 text-sm font-bold mb-2" for="username">
         Username
       </label>
       <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="username" type="text" placeholder="Username" formControlName="username">
-      <p class="text-red-500 text-xs italic mt-2">Username</p>
+      <!-- <p class="text-red-500 text-xs italic mt-2">Username</p> -->
     </div>
     <div *ngIf="login">
       <label class="block text-gray-700 text-sm font-bold mb-2">
@@ -16,25 +17,25 @@
           <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline mr-2" id="firstname" type="text" placeholder="Firstname" formControlName="firstname">
           <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="lastname" type="text" placeholder="Lastname" formControlName="lastname">
         </div>
-        <p class="text-red-500 text-xs italic mt-2">Firstnñame</p>
+        <!-- <p class="text-red-500 text-xs italic mt-2">Firstname</p> -->
       </div>
     </div>
     <div class="mb-4">
       <label class="block text-gray-700 text-sm font-bold mb-2" for="email">
         Email
       </label>
-      <input class="shadow appearance-none border border-red-500 rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" id="email" type="email" placeholder="Email" formControlName="email">
-      <p class="text-red-500 text-xs italic">Email</p>
+      <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" id="email" type="email" placeholder="Email" formControlName="email">
+      <!-- <p class="text-red-500 text-xs italic">Email</p> -->
     </div>
     <label class="block text-gray-700 text-sm font-bold mb-2" for="password">
       Password
     </label>
     <div class="mb-4">
       <div class="flex">
-        <input class="shadow appearance-none border border-red-500 rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline mr-2" id="password" type="password" placeholder="******************" formControlName="password">
-        <input class="shadow appearance-none border border-red-500 rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" id="confirmPassword" type="confirmPassword" placeholder="******************" *ngIf="login" formControlName="confirmPassword">
+        <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline mr-2" id="password" type="password" placeholder="******************" formControlName="password">
+        <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" id="confirmPassword" type="confirmPassword" placeholder="******************" *ngIf="login" formControlName="confirmPassword">
       </div>
-      <p class="text-red-500 text-xs italic">Password</p>
+      <!-- <p class="text-red-500 text-xs italic">Password</p> -->
     </div>
     <div class="flex items-center justify-between">
       <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit">
@@ -47,4 +48,4 @@
     </a>
   </form>
 </div>
-<img style="width: 1045px; height: 561px;" src="../../../assets/videojuegos.jpg">
+<img style="width: 1035px; height: 625px;" src="../../../assets/videojuegos.jpg">
