--- a/client/src/app/pages/profile/profile.component.html
+++ b/client/src/app/pages/profile/profile.component.html
@@ -1,1 +1,52 @@
-<p>profile works!</p>
+<app-navbar></app-navbar>
+<div class="flex flex-row justify-center items-center bg-red-200 m-auto">
+  <img style="border-radius: 50px; height: 100px; margin-right: 10px; padding: 10px; width: 100px;" [src]="user.picture" alt="{{user.name}}" referrerpolicy="no-referrer">
+  Username: {{user.username}}
+  <br>
+  Name: {{user.name}}
+  <br>
+  Email: {{user.email}}
+  <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-full float-right" (click)="setEditing()">Edit</button>
+</div>
+<div *ngFor="let p of user.posts" class="flex justify-center items-center mt-4">
+  <div class="max-w-sm rounded overflow-hidden shadow-lg bg-slate-100">
+    <div class="px-6 py-4">
+      <!-- <button class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded-full float-right" *ngIf="p.userId === localUser.result._id" (click)="deletePost(p.userId, p._id)">Delete</button>
+      <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-full float-right" *ngIf="p.userId === localUser.result._id" (click)="setEditing(p)">Edit</button> -->
+      <div class="font-bold text-xl mb-2"> {{p.username}} </div>
+        <p class="text-gray-700 text-base">
+        {{p.text}}
+        </p>
+    </div>
+    <div *ngFor="let photo of p.photos">
+      <img class="w-full" [src]="photo" alt="photos">
+    </div>
+  </div>
+  <section class="modal" [ngClass]="{'is-open': editing === true}">
+    <div class='modal-container'>
+      <h1>EDIT YOUR POST</h1>
+      <form *ngIf="editing === true" [formGroup]="profileData" (submit)="editProfile()" class="w-full max-w-lg">
+        <div class="flex flex-wrap -mx-3 mb-6">
+          <div class="w-full px-3">
+            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-last-name">
+              Username
+            </label>
+            <input class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" placeholder="Leave empty if you want it to stay the same" type="text" formControlName="username">
+            {{user.username}}
+          </div>
+        </div>
+        <div class="flex flex-wrap -mx-3 mb-6">
+          <div class="w-full px-3">
+            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-password">
+              PIcture
+            </label>
+            <input class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" placeholder="Leave empty if you want it to stay the same" type="text" formControlName="picture">
+            {{user.picture}}
+          </div>
+        </div>
+        <button style="margin-left: 60px" type="submit" class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-full">Confirm</button>
+      </form>
+      <button class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded-full" (click)="setEditing()">Cancel</button>
+    </div>
+  </section>
+</div>
