--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -24,7 +24,7 @@
             <button class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium" [routerLink]="['/home']" routerLinkActive="bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium">Home</button>
             <form [formGroup]="search" class="flex" (submit)="goToSearch()">
               <input type="text" formControlName="text" placeholder="Search someone" class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500">
-              <button type="submit">Search</button>
+              <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-md float-right" type="submit">Search</button>
             </form>
           </div>
         </div>
